# rimuru

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  iii-config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  integration-tests.yml  release.yml
config/: default.toml
crates/rimuru-cli/: Cargo.toml
crates/rimuru-cli/src/: main.rs  output.rs
crates/rimuru-core/: Cargo.toml
crates/rimuru-core/src/: http.rs  main.rs  state.rs  worker.rs
crates/rimuru-desktop/: Cargo.toml  tauri.conf.json
crates/rimuru-desktop/src/: commands.rs  lib.rs  main.rs  notifications.rs  state.rs  tray.rs
crates/rimuru-desktop/src/commands/: agents.rs  costs.rs  export.rs  hooks.rs  plugins.rs  sessions.rs
crates/rimuru-tui/src/: app.rs  client.rs  main.rs  state.rs  theme.rs  ui.rs  widgets.rs
docs/: api.md
docs/dev-guide/: api-reference.md  architecture.md  building.md  contributing.md  creating-adapters.md  creating-plugins.md
docs/plugins/: README.md  hooks.md
docs/user-guide/: agents.md  cli-reference.md  costs.md  getting-started.md  keyboard-shortcuts.md  plugins.md  sessions.md  skills.md  themes.md
examples/plugins/example_agent/: Cargo.toml  rimuru-plugin.toml
examples/plugins/example_agent/src/: lib.rs
examples/plugins/example_exporter/: Cargo.toml  rimuru-plugin.toml
examples/plugins/example_notifier/: Cargo.toml  rimuru-plugin.toml
examples/plugins/example_notifier/src/: lib.rs
rimuru-cli/: Cargo.toml
rimuru-cli/src/: config.rs  main.rs
rimuru-cli/src/commands/: agents.rs  costs.rs  hooks.rs  mod.rs  models.rs  plugins.rs  sessions.rs  skills.rs  sync.rs
rimuru-core/: Cargo.toml
rimuru-core/migrations/: 20240101000001_create_agents.sql  20240101000002_create_sessions.sql  20240101000003_create_cost_records.sql  20240101000004_create_model_info.sql  20240101000005_create_system_metrics.sql
rimuru-core/src/: config.rs  db.rs  error.rs  lib.rs
rimuru-core/src/adapters/: factory.rs  mod.rs  registry.rs  traits.rs  types.rs
rimuru-core/src/adapters/claude_code/: config.rs  cost.rs  mod.rs  session.rs
rimuru-core/src/adapters/codex/: config.rs  cost.rs  mod.rs  session.rs
rimuru-core/src/adapters/copilot/: config.rs  cost.rs  mod.rs  session.rs
rimuru-core/src/adapters/cursor/: config.rs  cost.rs  mod.rs  session.rs
rimuru-core/src/adapters/goose/: config.rs  cost.rs  mod.rs  session.rs
rimuru-core/src/adapters/opencode/: config.rs  cost.rs  mod.rs  session.rs
rimuru-core/src/discovery/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  goose.rs  mod.rs  opencode.rs  scanner.rs
rimuru-core/src/hooks/: handlers.rs  manager.rs  mod.rs  types.rs
rimuru-core/src/metrics/: aggregator.rs  collector.rs  mod.rs
rimuru-core/src/models/: agent.rs  cost.rs  mod.rs  model_info.rs  session.rs  system_metrics.rs
rimuru-core/src/plugins/: loader.rs  manifest.rs  mod.rs  registry.rs  sandbox.rs  traits.rs  types.rs
rimuru-core/src/plugins/builtin/: csv_exporter.rs  discord_notifier.rs  json_exporter.rs  mod.rs  slack_notifier.rs  webhook_notifier.rs
rimuru-core/src/repo/: agent_repo.rs  cost_repo.rs  metrics_repo.rs  mod.rs  model_repo.rs  session_repo.rs
rimuru-core/src/services/: adapter_manager.rs  cost_aggregator.rs  mod.rs  session_aggregator.rs
rimuru-core/src/skillkit/: agent_detection.rs  bridge.rs  config.rs  mod.rs  sync.rs  types.rs
rimuru-core/src/skillkit/operations/: install.rs  list.rs  mod.rs  publish.rs  recommend.rs  search.rs  translate.rs
rimuru-core/src/sync/: aggregator.rs  mod.rs  scheduler.rs  traits.rs  types.rs
rimuru-core/src/sync/providers/: anthropic.rs  google.rs  litellm.rs  mod.rs  openai.rs  openrouter.rs
rimuru-core/tests/: adapters_test.rs  hooks_test.rs  models_test.rs  plugins_test.rs  repo_test.rs  sync_test.rs
rimuru-desktop/: index.html  package-lock.json  package.json  vite.config.ts
rimuru-desktop/playbook-templates/: bug-fix.toml  code-review.toml  feature-dev.toml
rimuru-desktop/src/: App.tsx  main.tsx
rimuru-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rimuru-desktop/src-tauri/capabilities/: default.json
rimuru-desktop/src-tauri/icons/: icon.icns
rimuru-desktop/src-tauri/src/: events.rs  lib.rs  state.rs  tray.rs  window_state.rs
rimuru-desktop/src-tauri/src/commands/: agents.rs  costs.rs  export.rs  filesystem.rs  groupchat.rs  hooks.rs  metrics.rs  mod.rs  plugins.rs  pty_commands.rs  remote_commands.rs  sessions.rs  settings.rs  skills.rs  sync.rs
rimuru-desktop/src-tauri/src/groupchat/: mod.rs  types.rs
rimuru-desktop/src-tauri/src/playbooks/: mod.rs  types.rs
rimuru-desktop/src-tauri/src/pty/: agents.rs  discovery.rs  manager.rs  mod.rs  reader.rs  session.rs  worktree.rs
rimuru-desktop/src-tauri/src/remote/: mod.rs  server.rs
rimuru-desktop/src/components/: AboutDialog.module.css  AboutDialog.tsx  ActivityFeed.module.css  ActivityFeed.tsx  AddAgentModal.module.css  Gauge.tsx  (+39 more)
rimuru-plugin-sdk/: Cargo.toml
rimuru-plugin-sdk/src/: lib.rs  macros.rs  prelude.rs
rimuru-tui/: Cargo.toml
rimuru-tui/src/: app.rs  lib.rs  main.rs
rimuru-tui/src/data/: loader.rs  mod.rs  state.rs
rimuru-tui/src/events/: commands.rs  handler.rs  keybinds.rs  mod.rs
rimuru-tui/src/theme/: catppuccin.rs  colors.rs  dracula.rs  gruvbox.rs  loader.rs  mod.rs  nord.rs  styles.rs  tokyo_night.rs
rimuru-tui/src/ui/: layout.rs  mod.rs  utils.rs
rimuru-tui/src/ui/views/: agent_details.rs  agents.rs  cost_details.rs  costs.rs  dashboard.rs  help.rs  hooks.rs  metrics.rs  mod.rs  plugins.rs  session_details.rs  sessions.rs  skill_details.rs  skills.rs
rimuru-tui/src/ui/widgets/: cost_sparkline.rs  dialog.rs  footer.rs  header.rs  logo.rs  metrics_gauge.rs  mod.rs  modal.rs  progress_bar.rs  spinner.rs  toast.rs
scripts/: generate-readme-tags.py
tests/: docker-compose.yml
tests/fixtures/: init.sql  sample_data.json
tests/integration/: agent_flow_test.rs  cli_test.rs  mod.rs  plugin_flow_test.rs  sync_flow_test.rs
ui/src/: App.tsx
(+212 files in other folders)
