[package]
name = "rimuru-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Rimuru - AI agent orchestration and cost tracking"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging/tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# System metrics
sysinfo = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Unique identifiers
uuid = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Directory paths
dirs = { workspace = true }

# TOML parsing (for plugin manifests)
toml = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
wiremock = "0.6"

[lints]
workspace = true
