[package]
name = "rimuru-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rimuru-desktop"
path = "src/main.rs"

[dependencies]
tauri.workspace = true
tauri-plugin-global-shortcut.workspace = true
tauri-plugin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
