[package]
name = "example-agent"
version = "0.1.0"
edition = "2021"
authors = ["Example Author <example@example.com>"]
license = "MIT"
description = "Example Rimuru agent plugin - demonstrates how to create a new agent adapter"

[workspace]

[dependencies]
rimuru-plugin-sdk = { path = "../../../rimuru-plugin-sdk" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
